// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`defineDaoUtilCastMethodCodeForDomainObject should look correct for a domain entity which directly declares a reference to another 1`] = `
"import { HasMetadata } from 'type-fns';

import { CarriageCargo } from '$PATH_TO_DOMAIN_OBJECT';
import { SqlQueryFindCarriageCargoByIdOutput as SqlQueryFindCarriageCargoByIdOutputStrict } from '$PATH_TO_GENERATED_SQL_TYPES';
import { asFromDatabase } from '../.generated/casts';

export type { SqlQueryFindCarriageCargoByIdOutputStrict };

export const castFromDatabaseObject = (
  dbObject: SqlQueryFindCarriageCargoByIdOutputStrict,
): HasMetadata<CarriageCargo> =>
  new CarriageCargo({
    id: asFromDatabase.number(dbObject.id),
    uuid: dbObject.uuid,
    carriageRef: { uuid: dbObject.carriage_uuid },
  }) as HasMetadata<CarriageCargo>;"
`;

exports[`defineDaoUtilCastMethodCodeForDomainObject should look correct for a domain event with a static referenced array 1`] = `
"import { HasMetadata } from 'type-fns';

import { TrainLocatedEvent } from '$PATH_TO_DOMAIN_OBJECT';
import { SqlQueryFindTrainLocatedEventByIdOutput as SqlQueryFindTrainLocatedEventByIdOutputStrict } from '$PATH_TO_GENERATED_SQL_TYPES';
import { asFromDatabase } from '../.generated/casts';
import { castFromDatabaseObject as castGeocodeFromDatabaseObject, SqlQueryFindGeocodeByIdOutputJsoned } from '../geocodeDao/castFromDatabaseObject';

export type { SqlQueryFindTrainLocatedEventByIdOutputStrict };

export const castFromDatabaseObject = (
  dbObject: SqlQueryFindTrainLocatedEventByIdOutputStrict,
): HasMetadata<TrainLocatedEvent> =>
  new TrainLocatedEvent({
    id: asFromDatabase.number(dbObject.id),
    trainUuid: dbObject.train_uuid,
    occurredAt: asFromDatabase.date(dbObject.occurred_at),
    geocodes: (dbObject.geocodes as SqlQueryFindGeocodeByIdOutputJsoned[]).map(castGeocodeFromDatabaseObject),
  }) as HasMetadata<TrainLocatedEvent>;"
`;

exports[`defineDaoUtilCastMethodCodeForDomainObject should look correct for domain entity with references, array and solo, implicit and direct 1`] = `
"import { HasMetadata } from 'type-fns';

import { Train } from '$PATH_TO_DOMAIN_OBJECT';
import { SqlQueryFindTrainByIdOutput as SqlQueryFindTrainByIdOutputStrict } from '$PATH_TO_GENERATED_SQL_TYPES';
import { asFromDatabase } from '../.generated/casts';
import { castFromDatabaseObject as castGeocodeFromDatabaseObject, SqlQueryFindGeocodeByIdOutputJsoned } from '../geocodeDao/castFromDatabaseObject';
import { castFromDatabaseObject as castTrainBadgeFromDatabaseObject, SqlQueryFindTrainBadgeByIdOutputJsoned } from '../trainBadgeDao/castFromDatabaseObject';

export type { SqlQueryFindTrainByIdOutputStrict };

export const castFromDatabaseObject = (
  dbObject: SqlQueryFindTrainByIdOutputStrict,
): HasMetadata<Train> =>
  new Train({
    id: asFromDatabase.number(dbObject.id),
    uuid: dbObject.uuid,
    tin: dbObject.tin,
    homeStationGeocode: castGeocodeFromDatabaseObject(dbObject.home_station_geocode as SqlQueryFindGeocodeByIdOutputJsoned),
    leadEngineerUuid: dbObject.lead_engineer_uuid,
    badges: (dbObject.badges as SqlQueryFindTrainBadgeByIdOutputJsoned[]).map(castTrainBadgeFromDatabaseObject),
    locomotiveUuids: dbObject.locomotive_uuids as string[],
  }) as HasMetadata<Train>;"
`;

exports[`defineDaoUtilCastMethodCodeForDomainObject should look correct for simple domain entity 1`] = `
"import { HasMetadata } from 'type-fns';

import { Carriage } from '$PATH_TO_DOMAIN_OBJECT';
import { SqlQueryFindCarriageByIdOutput as SqlQueryFindCarriageByIdOutputStrict } from '$PATH_TO_GENERATED_SQL_TYPES';
import { asFromDatabase } from '../.generated/casts';

export type { SqlQueryFindCarriageByIdOutputStrict };

export const castFromDatabaseObject = (
  dbObject: SqlQueryFindCarriageByIdOutputStrict,
): HasMetadata<Carriage> =>
  new Carriage({
    id: asFromDatabase.number(dbObject.id),
    uuid: dbObject.uuid,
    cin: dbObject.cin,
    carries: dbObject.carries as Carriage['carries'],
    capacity: dbObject.capacity === null ? null : asFromDatabase.number(dbObject.capacity),
  }) as HasMetadata<Carriage>;"
`;

exports[`defineDaoUtilCastMethodCodeForDomainObject should look correct for simple literal 1`] = `
"import { HasMetadata } from 'type-fns';

import { Geocode } from '$PATH_TO_DOMAIN_OBJECT';
import { SqlQueryFindGeocodeByIdOutput as SqlQueryFindGeocodeByIdOutputStrict } from '$PATH_TO_GENERATED_SQL_TYPES';
import type { AsJsonFromDbObject } from '../.generated/casts';
import { asFromDatabase } from '../.generated/casts';

export type { SqlQueryFindGeocodeByIdOutputStrict };

export type SqlQueryFindGeocodeByIdOutputJsoned =
  AsJsonFromDbObject<SqlQueryFindGeocodeByIdOutputStrict>;

export type SqlQueryFindGeocodeByIdOutput =
  | SqlQueryFindGeocodeByIdOutputStrict
  | SqlQueryFindGeocodeByIdOutputJsoned;

export const castFromDatabaseObject = (
  dbObject: SqlQueryFindGeocodeByIdOutput,
): HasMetadata<Geocode> =>
  new Geocode({
    id: asFromDatabase.number(dbObject.id),
    latitude: asFromDatabase.number(dbObject.latitude),
    longitude: asFromDatabase.number(dbObject.longitude),
  }) as HasMetadata<Geocode>;"
`;

exports[`defineDaoUtilCastMethodCodeForDomainObject should look correct when the same dobj is referenced more than once in a dobj 1`] = `
"import { HasMetadata } from 'type-fns';

import { TravelRoute } from '$PATH_TO_DOMAIN_OBJECT';
import { SqlQueryFindTravelRouteByIdOutput as SqlQueryFindTravelRouteByIdOutputStrict } from '$PATH_TO_GENERATED_SQL_TYPES';
import { asFromDatabase } from '../.generated/casts';
import { castFromDatabaseObject as castGeocodeFromDatabaseObject, SqlQueryFindGeocodeByIdOutputJsoned } from '../geocodeDao/castFromDatabaseObject';

export type { SqlQueryFindTravelRouteByIdOutputStrict };

export const castFromDatabaseObject = (
  dbObject: SqlQueryFindTravelRouteByIdOutputStrict,
): HasMetadata<TravelRoute> =>
  new TravelRoute({
    id: asFromDatabase.number(dbObject.id),
    uuid: dbObject.uuid,
    originGeocode: castGeocodeFromDatabaseObject(dbObject.origin_geocode as SqlQueryFindGeocodeByIdOutputJsoned),
    destinationGeocode: castGeocodeFromDatabaseObject(dbObject.destination_geocode as SqlQueryFindGeocodeByIdOutputJsoned),
  }) as HasMetadata<TravelRoute>;"
`;

exports[`defineDaoUtilCastMethodCodeForDomainObject should read a NULLABLE declared reference from the same key it null-checks 1`] = `
"import { HasMetadata } from 'type-fns';

import { CarriageCargo } from '$PATH_TO_DOMAIN_OBJECT';
import { SqlQueryFindCarriageCargoByIdOutput as SqlQueryFindCarriageCargoByIdOutputStrict } from '$PATH_TO_GENERATED_SQL_TYPES';
import { asFromDatabase } from '../.generated/casts';

export type { SqlQueryFindCarriageCargoByIdOutputStrict };

export const castFromDatabaseObject = (
  dbObject: SqlQueryFindCarriageCargoByIdOutputStrict,
): HasMetadata<CarriageCargo> =>
  new CarriageCargo({
    id: asFromDatabase.number(dbObject.id),
    uuid: dbObject.uuid,
    carriageRef: dbObject.carriage_uuid === null ? null : { uuid: dbObject.carriage_uuid },
  }) as HasMetadata<CarriageCargo>;"
`;
